# bardo-github

./: Cargo.toml  LICENSE  README.md
ghauto/: Cargo.toml
ghauto-client-v3/: Cargo.toml
ghauto-client-v3/src/: client.rs  gh_auth.rs  headers.rs  lib.rs  macros.rs  util.rs
ghauto-client-v3/src/issues/: get.rs
ghauto-client-v3/src/repos/: get.rs  post.rs  put.rs
ghauto-client-v3/src/users/: get.rs
ghauto-config/: Cargo.toml
ghauto-config/src/: config.rs  context.rs  credentials.rs  file.rs  lib.rs  profile.rs
ghauto-console/: Cargo.toml
ghauto-console/src/: cli.rs  cmd.rs  lib.rs  utils.rs
ghauto-console/src/commands/: get_issues.rs  get_labels.rs  mod.rs  users.rs
ghauto-console/src/commands/issues/: get.rs
ghauto-console/src/commands/labels/: get.rs
ghauto-console/src/commands/pulls/: get.rs
ghauto-console/src/commands/repo/: apply.rs  clone.rs  create_branch.rs  get.rs  latest_commit_master.rs  mod.rs  post.rs  put.rs
ghauto-console/src/display/: mod.rs
ghauto-defaults/repo/: labels.yml
ghauto/src/: main.rs
src/: client.rs  github.rs  lib.rs  macros.rs  main.rs
src/commands/: issue.rs
