[package]

name = "repo"
version = "0.0.1"
authors = ["Sebastian Kaiser <sebastian.kaiser@crvsh.io>"]

[dependencies]
# github-gql-rs = "0.0.1"
hyper = { version = "0.13.2" }
hyper-rustls = { version = "0.19.1", optional = true }
hyper-tls = { version = "0.4.1", optional = true }
native-tls = { version = "0.2.3", optional = true }
error-chain = "0.12.2"
tokio-core = "0.1.17"
futures = "0.3.4"
serde = "1.0.104"
serde_json = "1.0.48"
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
oauth2 = { version = "3.0.0-alpha.9" }

[dependencies.github-rs]
version = "0.7.0"
default-features = false
features = ["rust-native-tls"]
