[package]
name = "ghauto-client-v3"
version = "0.0.1"
authors = [ "Sebastian Kaiser <sk4is3r@gmail.com>" ]
edition = "2018"

[dependencies]
# github-gql-rs = "0.0.1"
hyper = { version = "0.13.2" }
hyper-rustls = { version = "0.19.1", optional = true }
hyper-tls = { version = "0.4.1", optional = true }
native-tls = { version = "0.2.3", optional = true }
error-chain = "0.12.2"
tokio = { version = "0.2.11", features = ["full"] }
futures = "0.3.4"
http = "0.2.0"
serde = "1.0.104"
serde_json = "1.0.48"
oauth2 = { version = "3.0.0-alpha.9" }

[dependencies.github-rs]
version = "0.7.0"
default-features = false
features = ["rust-native-tls"]

[features]
default = ["rustls"]
rustls = ["hyper-rustls"]
rust-native-tls = ["native-tls", "hyper-tls"]

[dev-dependencies]
serde_derive = "1.0.90"
