[package]
name = "ghauto-console"
version = "0.0.1"
authors = [ "Sebastian Kaiser <sk4is3r@gmail.com>" ]
edition = "2018"

[dependencies]
ghauto-config = { path = "../ghauto-config", version = "0.0.1" }
ghauto-client-v3 = { path = "../ghauto-client-v3", version = "0.0.1" }
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
