[package]
name = "ghauto-console"
version = "0.0.1"
authors = [ "Sebastian Kaiser <sk4is3r@gmail.com>" ]
edition = "2018"

[dependencies]
itertools = "0.9.0"
toml = "0.5"
termion = "*"
regex = "1.3.6"
prettytable-rs = "^0.8"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.90"
ghauto-config = { path = "../ghauto-config", version = "0.0.1" }
ghauto-client-v3 = { path = "../ghauto-client-v3", version = "0.0.1" }
clap = "2.33.0"
reqwest = { version = "0.10.4" }
chrono = "0.4"
